multiple splide carousel and use overflow to hide items and stop loop items when not enough items(book)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,4 +181,6 @@
 
 
   // Splide
-  
+  .splide:not(.is-overflow) .splide__arrows {
+    display: none;
+  }
